--- a/WebApplication1/Areas/coadmin/Views/contacto/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contacto/agregar.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
-    ViewBag.Title = "informacion";
-    Page.Title = "Información de contacto - Brokolee Software";
+    ViewBag.Title = "agregar";
+    Page.Title = "Agregar contacto - Brokolee Software";
 }
 
 
@@ -14,13 +14,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Información de contacto</h4>
+                            <h4 class="page-title">Agregar contacto</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "coadmin" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Información de contacto</li>
+                            <li class="breadcrumb-item active">Agregar contacto</li>
                         </ul>
                     </div>
                 </div>
@@ -49,7 +49,7 @@
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Compañía administración</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value=""
+                                        <input maxlength="30" class="form-control" type="text" value=""
                                                required name="company_admin"
                                                placeholder="Compañía administración" id="example-email-input"
                                                data-toggle="tooltip" title="Nombre de compañía de administración" />
@@ -63,9 +63,9 @@
                                 <label for="example-name1-input" class="col-sm-3 col-form-label">Administrador o Coordinador</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value="" name="coordinator"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="coordinator"
                                                placeholder="Administrador o Coordinador" id="example-name1-input"
-                                               data-toggle="tooltip" title="Administrador o Coordinador de administración" />
+                                               data-toggle="tooltip" title="Administrador o Coordinador de administración" required/>
                                    
                                         <small class="form-text text-muted">Administrador o Coordinador de administración</small>
                                 </div>
@@ -76,9 +76,9 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Presidente</label>
                                 <div class="col-sm-9">
                                     
-                                        <input class="form-control" type="text" value=""
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value=""
                                                name="president" placeholder="Nombre del Presidente" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del Presidente">
+                                               data-toggle="tooltip" title="Nombre completo del Presidente" required>
                                     
                                     <small class="form-text text-muted">Nombre completo del Presidente</small>
                                 </div>
@@ -87,11 +87,11 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Vice-Presidente</label>
                                 <div class="col-sm-9">
                                   
-                                        <input class="form-control" type="text" name="vice_president"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" name="vice_president"
                                                value=""
                                                data-toggle="tooltip" title="Nombre completo del Vice-Presidente"
                                                placeholder="Nombre del Vice-Presidente"
-                                               id="example-lastname1-input" />
+                                               id="example-lastname1-input" required />
                                     
 
                                     <small class="form-text text-muted">Nombre completo del Vice-Presidente</small>
@@ -101,10 +101,10 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Tesorero</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value="" name="treasurer"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="treasurer"
                                                placeholder="Nombre del tesorero"
                                                data-toggle="tooltip" title="Nombre completo del tesorero"
-                                               id="example-lastname1-input">
+                                               id="example-lastname1-input" required>
                                     
 
                                         <small class="form-text text-muted">Nombre completo del tesorero</small>
@@ -114,11 +114,10 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Secretario</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value="" name="secretary"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="secretary"
                                                placeholder="Nombre del secretario" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del secretario" />
+                                               data-toggle="tooltip" title="Nombre completo del secretario" required />
                                     
-
                                         <small class="form-text text-muted">Nombre completo del secretario</small>
                                 </div>
                             </div>
@@ -126,9 +125,9 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Vocal</label>
                                 <div class="col-sm-9">
                                   
-                                        <input class="form-control" type="text" value="" name="vocal1"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="vocal1"
                                                placeholder="Nombre del vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del vocal" />
+                                               data-toggle="tooltip" title="Nombre completo del vocal" required/>
                                     
 
                                         <small class="form-text text-muted">Nombre completo del vocal</small>
@@ -138,9 +137,9 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Vocal</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value="" name="vocal2"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="vocal2"
                                                placeholder="Nombre del vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del vocal" />
+                                               data-toggle="tooltip" title="Nombre completo del vocal" required />
                                     
                                         <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
@@ -149,9 +148,9 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Vocal</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value="" name="vocal3"
+                                        <input maxlength="30" class="form-control soloTexto" type="text" value="" name="vocal3"
                                                placeholder="Nombre del vocal" id="example-lastname1-input"
-                                               data-toggle="tooltip" title="Nombre completo del vocal" />
+                                               data-toggle="tooltip" title="Nombre completo del vocal" required />
                                     
                                         <small class="form-text text-muted">Nombre completo del vocal</small>
                                 </div>
@@ -161,10 +160,10 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección física</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value=""
+                                        <input maxlength="90" class="form-control" type="text" value=""
                                                placeholder="Dirección física" name="phy_address"
                                                data-toggle="tooltip" title="Dirección física"
-                                               id="example-lastname1-input">
+                                               id="example-lastname1-input" required>
                                     
                                     <small class="form-text text-muted">Dirección física</small>
                                 </div>
@@ -174,7 +173,7 @@
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Dirección postal</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="text" value="" name="postal_address" required
+                                        <input maxlength="15" class="form-control" type="text" value="" name="postal_address" required
                                                placeholder="Dirección postal" id="example-lastname1-input"
                                                data-toggle="tooltip" title="Dirección postal" />
                                     
@@ -184,25 +183,25 @@
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Teléfono</label>
+                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Teléfono 1</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="tel" value=""
+                                        <input maxlength="15" class="form-control soloNumero" type="tel" value=""
                                                name="phone_number1" data-toggle="tooltip"
                                                title="Teléfono de contacto"
-                                               placeholder="# Teléfono" id="example-tel1-input">
+                                               placeholder="# Teléfono" id="example-tel1-input" required>
                                  
                                     <small class="form-text text-muted">Teléfono de contacto</small>
                                 </div>
                             </div>
                             <div class="form-divider"></div>
                             <div class="form-group row">
-                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Teléfono</label>
+                                <label for="example-tel1-input" class="col-sm-3 col-form-label">Teléfono 2</label>
                                 <div class="col-sm-9">
                                    
-                                        <input class="form-control" type="tel" value="" name="phone_number2"
+                                        <input maxlength="15" class="form-control soloNumero" type="tel" value="" name="phone_number2"
                                                placeholder="# Teléfono" id="example-tel1-input"
-                                               data-toggle="tooltip" title="Teléfono de contacto" />
+                                               data-toggle="tooltip" title="Teléfono de contacto" required/>
                                    
                                     <small class="form-text text-muted">Teléfono de contacto</small>
                                 </div>
@@ -212,9 +211,9 @@
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Correo electrónico</label>
                                 <div class="col-sm-9">
                                   
-                                        <input class="form-control" type="email" value="" name="email"
+                                        <input maxlength="40" class="form-control" type="email" value="" name="email"
                                                placeholder="Correo electrónico" id="example-email-input"
-                                               data-toggle="tooltip" title="Correo electrónico del suplidor" />
+                                               data-toggle="tooltip" title="Correo electrónico del suplidor" required />
                                    
                                     <small class="form-text text-muted">Correo electrónico del suplidor</small>
                                 </div>
