--- a/WebApplication1/Areas/coadmin/Views/contratos/agregar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/agregar.cshtml
@@ -44,7 +44,17 @@
         <!-- end back button -->
         <!-- end page title end breadcrumb -->
         <div class="row">
-
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card">
                     @using (Html.BeginForm("newcontract", "contratos",
@@ -100,7 +110,7 @@
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04"
                                                    name="upload_contract">
-                                            <label id="archeditar2"class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
+                                            <label id="archeditar2" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
                                         </div>
                                     </div>
                                 </div>
@@ -118,7 +128,7 @@
                             <div class="form-divider"></div>
                             <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
-</div>
+                        </div>
                     }
                 </div>
             </div>
