--- a/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/contratos/editar.cshtml
@@ -64,7 +64,7 @@
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
                                 <div class="col-sm-9">
-                                    <input maxlength="30"  class="form-control soloTexto" type="text"
+                                    <input maxlength="30" class="form-control soloTexto" type="text"
                                            data-toggle="tooltip" title="Nombre del contrato"
                                            value="@Model.editContract.first_name"
                                            name="first_name" required
@@ -76,7 +76,7 @@
                             <div class="form-group row">
                                 <label for="example-date-input" class="col-sm-3 col-form-label">Fecha del contrato</label>
                                 <div class="col-sm-9">
-                                    <input class="form-control" type="date" required autocomplete="off" 
+                                    <input class="form-control" type="date" required autocomplete="off"
                                            value="@Convert.ToDateTime(Model.editContract.date_contract).ToString("yyyy-MM-dd")"
                                            name="date_contract" data-toggle="tooltip" title="Mes / día / año | Fecha del día que se subió el contrato"
                                            id="example-date-input">
@@ -101,11 +101,29 @@
                                     <div class="input-group mt-2">
                                         <div class="custom-file">
                                             <input type="file" class="custom-file-input" id="inputGroupFile04" name="upload_contract">
-                                            <label class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
+                                            <label id="archeditar2" class="custom-file-label" for="inputGroupFile04">Seleccionar archivo</label>
                                         </div>
                                     </div>
                                 </div>
                             </div>
+                            @if (Model.editContract.upload_contract != null)
+                            {
+                                <div class="form-group row">
+                                    <label for="example-name2-input" class="col-sm-3 col-form-label">Descargar archivo</label>
+                                    <div class="col-sm-9">
+                                        <div class="input-group mt-2">
+                                            <div class="custom-file">
+
+                                                <a href="~/Upload/Upload_Writing/@Model.editContract.upload_contract" download="">
+                                                    <button type="button" class="btn btn-info waves-effect waves-light">
+                                                        <i class="mdi mdi-cloud-download  m-r-5"></i> Descargar archivo
+                                                    </button>
+                                                </a>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-lastname1-input" class="col-sm-3 col-form-label">Descripción</label>
@@ -184,3 +202,18 @@
     </div><!-- container -->
 
 </div> <!-- Page content Wrapper -->
+
+
+<script type="text/javascript">
+
+    (function () {
+
+        $('#inputGroupFile04').change(function () {
+
+
+            $('#archeditar2').html($(this)[0].files[0].name);
+        });
+
+
+    })();
+</script>
