--- a/WebApplication1/Areas/coadmin/Views/uso/derechos.cshtml
+++ b/WebApplication1/Areas/coadmin/Views/uso/derechos.cshtml
@@ -59,7 +59,7 @@
                             }
 
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href=""><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         }
                     </div>
