--- a/WebApplication1/Areas/webmaster/Views/suplidores/agregarCategoria.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/agregarCategoria.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "agregar";
-    Page.Title = "Agregar categoria - Brokolee Software";
+    Page.Title = "Agregar categoría - Brokolee Software";
 }
 
 <style media="screen">
@@ -30,13 +30,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Agregar Administrador</h4>
+                            <h4 class="page-title">Agregar categoría</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Agregar categoria</li>
+                            <li class="breadcrumb-item active">Agregar categoría</li>
                         </ul>
                     </div>
                 </div>
@@ -54,7 +54,7 @@
 
             <div class="col-12">
                 <div class="card">
-                    @using (Html.BeginForm("newCatg", "categorias", FormMethod.Post,
+                    @using (Html.BeginForm("newCatg", "suplidores", FormMethod.Post,
                       new
                       {
                           id = "newcategoryForm",
