--- a/WebApplication1/Areas/webmaster/Views/suplidores/editarCategoria.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/editarCategoria.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "editar";
-    Page.Title = "Editar categoria - Brokolee Software";
+    Page.Title = "Editar categoría - Brokolee Software";
 }
 
 <style media="screen">
@@ -30,13 +30,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Editar Administrador</h4>
+                            <h4 class="page-title">Editar categoría</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Editar categoria</li>
+                            <li class="breadcrumb-item active">Editar categoría</li>
                         </ul>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
 
             <div class="col-12">
                 <div class="card">
-                    @using (Html.BeginForm("editCatg", "categorias", FormMethod.Post,
+                    @using (Html.BeginForm("editCatg", "suplidores", FormMethod.Post,
                       new
                       {
                           id = "editcategoryForm",
@@ -67,7 +67,7 @@
                         @Html.AntiForgeryToken()
                         <input type="hidden" value="@Model.categ.Id" name="editID" />
                         <div class="card-body">
-                            <h5 class="d-inline-block">Editar categoria</h5>
+                            <h5 class="d-inline-block">Editar categoría</h5>
                             <div class="form-divider"></div>
                             <div class="form-group row">
                                 <label for="example-email-input" class="col-sm-3 col-form-label">Nombre</label>
