--- a/WebApplication1/Areas/webmaster/Views/suplidores/listadoCategorias.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/suplidores/listadoCategorias.cshtml
@@ -1,7 +1,7 @@
 ﻿
 @{
     ViewBag.Title = "listado";
-    Page.Title = "Listado de categorias - Brokolee Software";
+    Page.Title = "Listado de categorías - Brokolee Software";
 }
 
 <div class="page-content-wrapper">
@@ -13,13 +13,13 @@
                 <div class="page-title-box">
                     <div class="float-left">
                         <div class="breadcrumb float-md-right">
-                            <h4 class="page-title">Listado de categorias</h4>
+                            <h4 class="page-title">Listado de categorías</h4>
                         </div>
                     </div>
                     <div class="float-right">
                         <ul class="breadcrumb float-md-right">
                             <li class="breadcrumb-item"><a href="@Url.Action("panel", "control", new { area = "webmaster" })" class="text-success"><i class="mdi mdi-home-modern"></i> Panel de control</a></li>
-                            <li class="breadcrumb-item active">Listado de categorias</li>
+                            <li class="breadcrumb-item active">Listado de categorías</li>
                         </ul>
                     </div>
                 </div>
@@ -51,6 +51,17 @@
         <!-- end back button -->
 
         <div class="row">
+            @if (ViewBag.msgError != null)
+            {
+                <div class="col-12">
+                    <div class="alert alert-danger" role="alert">
+                        <strong>Error: </strong> @ViewBag.msgError
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
+                </div>
+            }
             <div class="col-12">
                 <div class="card m-b-30">
                     <div class="card-body">
@@ -59,40 +70,40 @@
                                 <h5 class="d-inline-block">Listado</h5>
                             </div>
                             <div class="col-md-6 mb-1">
-                                <a href="@Url.Action("agregar", "categorias", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar nuevo</button></a>
+                                <a href="@Url.Action("agregarCategoria", "suplidores", new { area = "webmaster" })"><button type="button" class="btn btn-primary waves-effect waves-light float-xl-right float-lg-right float-md-left mb-1">Agregar nuevo</button></a>
                             </div>
                         </div>
                         <div class="table-responsive">
                             <table id="dataTable-directorio-suplidores" class="table table-striped table-bordered normal" style="border-collapse: collapse; border-spacing: 0; width: 100%;">
                                 <thead>
                                     <tr>
-                                        <th class="f-b status">Nombre</th>                                        
+                                        <th class="f-b status">Nombre</th>
                                         <th class="text-center f-b">Opciones</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model.categoryList)
                                     {
-                                    <tr>
-                                        <td>@item.name</td>                                       
-                                        <td class="text-center">                                            
-                                            <a href="@Url.Action("editar", "categorias", new { area = "webmaster",  editID = item.Id })">
-                                                <button type="button"
-                                                        class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
-                                                        data-toggle="tooltip" data-placement="top" title="Editar">
-                                                    <i class="mdi mdi-lead-pencil"></i>
-                                                </button>
-                                            </a>
-                                            <a href="#">
-                                                <button type="button" onclick="onDeleteCategorias(this)" data-id="@item.Id"
-                                                        class="btn btn-danger waves-effect waves-light btn-sm mb-1"
-                                                        data-toggle="tooltip"
-                                                        data-placement="top" title="Eliminar">
-                                                    <i class="mdi mdi-delete"></i>
-                                                </button>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                        <tr>
+                                            <td>@item.name</td>
+                                            <td class="text-center">
+                                                <a href="@Url.Action("editarCategoria", "suplidores", new { area = "webmaster",  editID = item.Id })">
+                                                    <button type="button"
+                                                            class="btn btn-primary waves-effect waves-light btn-sm mr-1 mb-1"
+                                                            data-toggle="tooltip" data-placement="top" title="Editar">
+                                                        <i class="mdi mdi-lead-pencil"></i>
+                                                    </button>
+                                                </a>
+                                                <a href="#">
+                                                    <button type="button" onclick="onDeleteCategorias(this)" data-id="@item.Id"
+                                                            class="btn btn-danger waves-effect waves-light btn-sm mb-1"
+                                                            data-toggle="tooltip"
+                                                            data-placement="top" title="Eliminar">
+                                                        <i class="mdi mdi-delete"></i>
+                                                    </button>
+                                                </a>
+                                            </td>
+                                        </tr>
                                     }
                                 </tbody>
                             </table>
