--- a/WebApplication1/Areas/webmaster/Views/uso/privacidad.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/uso/privacidad.cshtml
@@ -57,7 +57,7 @@
                                 <textarea class="form-control" rows="3" name="aviso" placeholder="">@Model.uso.aviso</textarea>
                             }
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         }
 
