--- a/WebApplication1/Areas/webmaster/Views/uso/terminos.cshtml
+++ b/WebApplication1/Areas/webmaster/Views/uso/terminos.cshtml
@@ -58,7 +58,7 @@
                             }
 
                             <div class="form-divider"></div>
-                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Editar</button></a>
+                            <a href=""><button type="submit" class="btn btn-primary waves-effect waves-light">Guardar</button></a>
                             <a href="javascript:history.back()"><button type="button" class="btn btn-danger waves-effect waves-light">Cancelar</button></a>
                         }
 
